--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!doctype html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://torqdl.github.io/moddingmhg/" />
-        <title>Modding Making History</title>
+        <meta http-equiv="refresh" content="0; url=https://torqdl.github.io/moddingmhg/">
+        <script type="text/javascript">
+            window.location.href = "https://torqdl.github.io/moddingmhg/"
+        </script>
+        <title>Page Redirection</title>
     </head>
-    
     <body>
-        <p>This site has been moved. Please use this <a href="https://torqdl.github.io/moddingmhg/">redirect</a> to get to the new site.</p>
+        If you are not redirected automatically, follow this <a href='https://torqdl.github.io/moddingmhg/'>link</a>.
     </body>
 </html>
